@@ -1,3 +1,7 @@
+2010-06-23  Ingo Renner  <ingo.renner@dkd.de>
+
+	* Fixed issue #8060: Page title defined twice in tx_solr_Indexer, credits Marc Bastian Heinrichs
+
 2010-06-22  Ingo Renner  <ingo.renner@dkd.de>
 
 	* Fixed issues #8162 and #8316, usage of deprecated APIs, credits Marc Bastian Heinrichs
